option('multithreaded', type : 'boolean', value : true, description: 'Use pthread_sigmask and link against the system\'s thread library')
option('reproc-cpp', type : 'boolean', value : true, description: 'Build C++ reproc')
option('examples', type : 'boolean', value : true, description: 'Request build of the examples')
